# blackbox-poc

./: .env.template  .gitignore  =3.9.0  ANDROID_INTEGRATION.md  ANDROID_QUICKSTART.md  AUDIT_REPORT.md  CLAUDE.md  CUSTOMER_SETUP.md  Claude.md  GEMINI.md  NOTIFICATION_CODE_REFERENCE.md  README.md  README.txt  VOICE_REFERENCE.md  blackbox-enhanced.service  blackbox_podcast_script.txt  cleanup_crash.sh  config.ini  config.ini.template  conftest.py  install_enhanced_service.sh  pytest.ini  requirements.dev.txt  requirements.lock.txt  requirements.txt  setup.sh  test_diff_viewer.txt  test_grok.sh
deployments/ugv_bno085/: ekf_oak.yaml.after  ekf_oak.yaml.before  oakd_camera.py.after  oakd_camera.py.before  package.xml  setup.cfg  setup.py  slam_nav.yaml.after  slam_nav.yaml.before  start_tools_api.sh.after  start_tools_api.sh.before  start_waveshare.sh.after  start_waveshare.sh.before  ugv_beast.urdf.after  ugv_beast.urdf.before  waypoints_bridge.py.after  waypoints_bridge.py.before
deployments/ugv_bno085/launch/: bno085.launch.py
deployments/ugv_bno085/ugv_bno085/: imu_node.py
docs/ugv-beast/setup/ugv_tools_api/: README.md  pyproject.toml
docs/ugv-beast/setup/ugv_tools_api/deploy/: ears.env.example  er.env.example  start_ears.sh  start_er.sh  start_supervisor.sh  start_voice.sh  ugv-ears.service  ugv-er.service  ugv-supervisor.service  ugv-tools-api.service  ugv-voice.service
docs/ugv-beast/setup/ugv_tools_api/patches/: add_gimbal_topic.patch
docs/ugv-beast/setup/ugv_tools_api/scripts/: container-bootstrap.sh  train_wakeword.sh  verify_wakeword.py
docs/ugv-beast/setup/ugv_tools_api/tests/: test_bridge_subscriptions.py  test_oakd_camera.py  test_pantilt_camera.py  test_registry.py  test_ros_bridge.py  test_schema.py  test_server.py  test_speak_server.py  test_tools_camera.py  (+5 more)
(+707 files in other folders)
