[project]
name = "ugv_tools_api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "opencv-python-headless>=4.9,<4.11",
  "numpy>=1.24,<2",
  "depthai>=2.24,<3",
  "scipy>=1.10",
  # AEC backend: speexdsp on Jetson aarch64, webrtc-audio-processing on x86.
  # The aec.py wrapper picks whichever imports first; both are listed so
  # `pip install ugv_tools_api` works on either arch. webrtc-audio-processing
  # fails to compile on aarch64 (SSE intrinsics) and is skipped via the
  # `; platform_machine != "aarch64"` marker so Jetson installs don't fail.
  "speexdsp>=0.1.1",
  "webrtc-audio-processing>=0.1.3 ; platform_machine != 'aarch64'",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
ugv-tools-api = "ugv_tools_api.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires live UGV Beast robot",
]
